@@ -206,6 +206,8 @@ Library
   instead of performing them in functions. Helps prevent import deadlocking in
   threads.
 
+- Issue #5647: MutableSet.__iand__() no longer mutates self during iteration.
+
 - Actually make the SimpleXMLRPCServer CGI handler work.
 
 - Issue #2522: locale.format now checks its first argument to ensure it has
